--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   },
   "homepage": "https://github.com/frodrigues-kununu/review-me#readme",
   "devDependencies": {
+    "@webcomponents/webcomponentsjs": "^2.2.10",
     "electron": "^5.0.1"
   },
   "dependencies": {
-    "@polymer/polymer": "^3.2.0"
+    "lit-element": "^2.1.0"
   }
 }
