--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "test",
-    "start": "electron ."
+    "start": "electron .",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -25,9 +26,12 @@
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "dotenv": "^8.0.0",
-    "electron": "^5.0.1"
+    "rollup": "^1.11.3",
+    "rollup-plugin-node-resolve": "^4.2.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "electron": "^5.0.1",
     "express": "^4.16.4",
     "lit-element": "^2.1.0"
   }
