--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "test",
-    "start": "electron .",
+    "start": "npm run build && electron .",
     "build": "rollup -c"
   },
   "repository": {
