--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
   "scripts": {
     "test": "test",
     "start": "npm run build && electron .",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "dist": "electron-builder ",
+    "demo": "electron-builder --dir"
+  },
+  "build": {
+    "appId": "com.review-me",
+    "asar": false,
+    "mac": {
+      "category": "productivity"
+    }
   },
   "repository": {
     "type": "git",
@@ -25,13 +34,14 @@
   "homepage": "https://github.com/frodrigues-kununu/review-me#readme",
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "dotenv": "^8.0.0",
+    "electron": "^5.0.1",
+    "electron-builder": "^20.39.0",
     "rollup": "^1.11.3",
     "rollup-plugin-node-resolve": "^4.2.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "electron": "^5.0.1",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "lit-element": "^2.1.0"
   }
