Fixed build issues and added app icon

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "build": {
     "appId": "com.review-me",
+    "asar": false,
+    "icon": "assets/icon.png",
     "mac": {
       "category": "productivity"
     },
